--- a/HTML.css
+++ b/HTML.css
@@ -18,12 +18,13 @@ header {
     color: rgb(74, 157, 49);
  }
 
- #About {
+#About {
     background-color: #FFBD33; 
     padding: 10%; 
     color: rgb(74, 157, 49);
  
  }
+
 body {
     font-family: 'Kdam Thmor Pro', sans-serif;
     font-size: 16px;
@@ -32,6 +33,11 @@ body {
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+}
+
+.parent {
+    display: flex;
+    width: 90%;
 }
 
 h1 {
@@ -79,7 +85,6 @@ ul li {
     text-align: center;
 }
 
-
 .featured-article a {
     text-decoration: none; 
     background-color: #333; 
@@ -99,11 +104,12 @@ ul li {
     margin-right: auto;
 }
 
-.industry {
+.parent .industry {
     background-color: #fff; 
     color: #e1cc40; 
     padding: 10px;
     padding-bottom: 5%;
+    width:30%;
 }
 
 .industry a {
@@ -116,10 +122,12 @@ ul li {
 }
 
 .career {
-    background-color:  #fff; 
+    background-color:#fff; 
     color: #3c3b3b; 
     padding: 10px;
     padding-bottom: 5%;
+    width:30%;
+
 }
 
 .career a {
@@ -141,6 +149,8 @@ ul li {
     color: #242222; 
     padding: 10px;
     padding-bottom: 5%;
+    width:30%;
+
 }
 
 .technical a {
@@ -178,13 +188,6 @@ address {
     color:#fff
 }
 
-iframe {
-    width: 100%;
-    height: 500px;
-    padding: 10px;
-    margin: 5%;
-}
-
 footer {
     font: 1em Impact, Lato;
     background-color: lightcoral;
@@ -202,36 +205,36 @@ input[type="text"]:required {
     border: 2px solid red;
 }
 
-@media (max-width: 600px) {
-    .container, .row, .column {
+@media (min-width: 768px) {
+    header {
         width: 100%;
-        display: block;
     }
 
-    p {
-        font-size: 18px;
-        line-height: 1.6;
+    footer {
+        width: 100%;
     }
 
+    .featured-article {
+        width: 80%;
+        margin: 0 auto;
+    }
+
+    .parent {
+        flex-direction: column;
+        align-items: center;
+        width: 80%;
+        margin: 0 auto;
+    }
+
+    .parent .industry,
+    .parent .technical,
+    .parent .career {
+        width: 100%;
+        margin-bottom: 20px;
+    }
+
+    /* Add styles for a big logo */
     header img {
-        max-width: 50px;
-    }
-}
-
-@media (min-width: 601px) {
-   
-
-    .category {
-        display: flex;
-    }
-
-    .category .article {
-        width: 30%; 
-        max-height: 500px; 
-        overflow-y: auto;
-    }
-
-    header img {
-        max-width: 200px;
+        max-width: 100px; /* Adjust the size as needed */
     }
 }
